fixes, media-object collapses when figure is loading

--- a/scss/_component.media-object.scss
+++ b/scss/_component.media-object.scss
@@ -20,6 +20,7 @@
 
   @include grid-media($neat-grid-medium) {
     @include grid-column(3);
+    min-height: 1px;
   }
 
   @include grid-media($neat-grid-large) {
